Change font of Team Member card on mobile; fix Hub footer

--- a/src/imports/components/TeamMemberCard/index.styl
+++ b/src/imports/components/TeamMemberCard/index.styl
@@ -27,8 +27,7 @@
     align-items center
 
     .member-name
-      font-family Montserrat
-      font-size: 21px;
+      font-size 21px
       font-weight bold
       margin-bottom 0
       color #333333
