--- a/src/mobilePages/Journey/Team/Sections/TeamMember/index.styl
+++ b/src/mobilePages/Journey/Team/Sections/TeamMember/index.styl
@@ -25,16 +25,16 @@
       height 1px
       width 64px
       margin 4px 0
-      background-color #9d9ee5
+      background-color #5c64aa
 
     .team-member-name
-      font-size 5.3vw
-      font-family Montserrat serif
+      font-size 5.6vw
+      font-weight 600
       margin 0
 
     .team-member-title
       font-size 4.2vw
-      color #9d9ee5
+      color #5c64aa
       margin 0
 
     .team-member-phrase
